--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* font insert */
 @import url("https://fonts.cdnfonts.com/css/minecraftia");
 @import url("https://fonts.cdnfonts.com/css/quub");
 @import url("https://fonts.cdnfonts.com/css/crima-display");
@@ -5,13 +6,12 @@
 body {
   background-color: rgb(255, 253, 242);
   margin: 1rem;
-  padding: 1rem;
+  padding-bottom: 5rem;
 }
 h1 {
   font-family: "Minecraftia", sans-serif;
   text-align: center;
   font-size: 4vh;
-  line-height: 75px;
   z-index: 3;
   color: rgb(0, 0, 0);
   filter: drop-shadow(2px 2px rgb(255, 66, 132));
@@ -28,9 +28,9 @@ label {
   margin-bottom: 15px;
   font-family: "Minecraftia", sans-serif;
   text-align: center;
-  font-size: 25px;
+  font-size: 3vh;
   color: rgb(0, 0, 0);
-  padding: 10px;
+  padding: 5px;
 }
 input {
   font-size: 30px;
@@ -49,12 +49,12 @@ input:hover {
 }
 button[type="submit"] {
   display: block;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "QUUB", sans-serif;
   background-color: rgb(0, 0, 0);
   color: white;
-  padding: 10px;
+  padding: 7px;
   letter-spacing: 2px;
-  font-size: 20px;
+  font-size: 18px;
   border: none;
   border-radius: 30px;
   cursor: pointer;
@@ -75,8 +75,8 @@ button[type="submit"]:hover {
   flex-direction: column;
   gap: 30px;
   padding: 0 50px;
+  animation: fadeIn ease 2s;
 }
-
 .width-60 {
   width: 60%;
 }
@@ -85,7 +85,6 @@ button[type="submit"]:hover {
   width: 95%;
   animation: float 3s ease-out infinite;
 }
-
 @keyframes float {
   50% {
     transform: translate(0, 20px);
@@ -106,7 +105,7 @@ button[type="submit"]:hover {
   flex-direction: column;
   row-gap: 45px;
 }
-
+/* each zodiac's button color */
 .aries {
   background-color: #fff6c7;
 }
@@ -154,7 +153,6 @@ button[type="submit"]:hover {
   border-color: rgb(255, 255, 255);
   transition: all 0.3s ease;
   box-shadow: 0 4px 6px rgba(255, 64, 96, 0.1);
-  transition: all 0.3s ease-in-out;
   font-family: Dogica;
 }
 .sign:hover {
@@ -162,7 +160,7 @@ button[type="submit"]:hover {
   box-shadow: 1px 7px 10px rgba(255, 11, 117, 0.2);
 }
 .sign:focus {
-  box-shadow: 2px 5px 5px 5px rgba(0, 16, 198, 0.2), 0 0 2 2px white;
+  box-shadow: 2px 5px 5px 5px rgba(0, 16, 198, 0.2), 0 0 2px 2px white;
   transform: scale(1.2);
 }
 #result {
@@ -185,11 +183,57 @@ button[type="submit"]:hover {
   line-height: 2rem;
   padding-top: 15px;
 }
+h2 {
+  font-family: "QUUB", sans-serif;
+  color: #ff0077;
+  text-shadow: 2px 2px rgb(0, 0, 0);
+  font-size: 250%;
+  line-height: 55px;
+}
+h3 {
+  font-family: "Crima", sans-serif;
+  font-weight: lighter;
+  font-size: 150%;
+  text-align: center;
+  padding: 1%;
+  width: 85%;
+  padding-left: 50px;
+}
+
+.popup {
+  display: inline-block;
+  padding-left: 25%;
+  z-index: -1;
+}
+
+/* Hidden until clicked */
+.popup .popuptext {
+  visibility: hidden;
+  width: 700px;
+  opacity: 0.97;
+  background-color: rgb(255, 255, 255);
+  color: rgb(173, 44, 93);
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  left: 500px;
+  bottom: 7%;
+  padding: 2%;
+  box-shadow: 0 4px 6px rgba(255, 64, 96, 0.1);
+  border: 5px solid rgb(255, 200, 217);
+  border-radius: 15px;
+  line-height: 200%;
+  text-align: center;
+}
+.popup .show {
+  visibility: visible;
+  animation: fadeIn 1s;
+}
 @keyframes fadeIn {
-  0% {
+  from {
     opacity: 0;
   }
-  100% {
-    opacity: 1;
+  to {
+    opacity: 0.98;
   }
 }
