--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   background-color: rgb(255, 253, 242);
   margin: 1rem;
-  padding-bottom: 5rem;
+  padding-bottom: 10rem;
 }
 h1 {
   font-family: "Minecraftia", sans-serif;
@@ -33,8 +33,8 @@ label {
   padding: 5px;
 }
 input {
-  font-size: 30px;
-  width: 15%;
+  font-size: 25px;
+  width: 17%;
   justify-content: center;
   text-align: center;
   box-sizing: border-box;
@@ -208,17 +208,16 @@ h3 {
 
 /* Hidden until clicked */
 .popup .popuptext {
+  margin-top: 3rem;
+  margin-left: 0.5rem;
   visibility: hidden;
-  width: 700px;
+  width: 40%;
   opacity: 0.97;
   background-color: rgb(255, 255, 255);
   color: rgb(173, 44, 93);
   border-radius: 6px;
   position: absolute;
   z-index: 1;
-  left: 500px;
-  bottom: 7%;
-  padding: 2%;
   box-shadow: 0 4px 6px rgba(255, 64, 96, 0.1);
   border: 5px solid rgb(255, 200, 217);
   border-radius: 15px;
